// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

package macaroon;
option go_package = "storj.io/common/macaroon";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message Caveat {
  // if any of these three are set, disallow that type of access
  bool disallow_reads = 1;
  bool disallow_writes = 2;
  bool disallow_lists = 3;
  bool disallow_deletes = 4;

  // If any entries exist, require all access to happen in at least
  // one of them.
  message Path {
    bytes bucket = 1;
    bytes encrypted_path_prefix = 2;
  }
  repeated Path allowed_paths = 10;

  // if set, the validity time window
  google.protobuf.Timestamp not_after = 20;
  google.protobuf.Timestamp not_before = 21;

  // if set, sets expiration time for new objects
  google.protobuf.Duration max_object_ttl = 22;

  // nonce is set to some random bytes so that you can make arbitrarily
  // many restricted macaroons with the same (or no) restrictions.
  bytes nonce = 30;
}
